Cambiados los botones de voto

--- a/src/app/general/components/forum-page/forum-page.component.html
+++ b/src/app/general/components/forum-page/forum-page.component.html
@@ -25,15 +25,22 @@
         <div class="answer-voting-controls">
             <div class="vote-buttons-group">
                 <button
-                    class="vote-button upvote"
-                    [ngClass]="{'voted-up': getUserVoteType(answer) === 'up'}"
-                    (click)="$event.stopPropagation(); voteUp(answer)">+</button>
+                  class="vote-button upvote"
+                  [ngClass]="{'voted-up': getUserVoteType(answer) === 'up'}"
+                  (click)="$event.stopPropagation(); voteUp(answer)"
+                >
+                  <i class="icon material-icons">thumb_up</i>
+                </button>
+
                 <button
-                    class="vote-button downvote"
-                    [ngClass]="{'voted-down': getUserVoteType(answer) === 'down'}"
-                    (click)="$event.stopPropagation(); voteDown(answer)">-</button>
+                  class="vote-button downvote"
+                  [ngClass]="{'voted-down': getUserVoteType(answer) === 'down'}"
+                  (click)="$event.stopPropagation(); voteDown(answer)"
+                >
+                  <i class="icon material-icons">thumb_down</i>
+                </button>
             </div>
-            <span class="votes-count">{{ answer.votes }}</span>
+            <span class="votes-text">Votos: <span class="votes-count">{{ answer.votes }}</span></span>
         </div>
       </div>
     }
