Se añaden los mensajes y la conversación a la base de datos y se navega correctamente a la página del chatbot

--- a/src/app/vet/components/diagnosis/diagnosis.component.html
+++ b/src/app/vet/components/diagnosis/diagnosis.component.html
@@ -51,6 +51,25 @@
     >
       Preguntar
     </button>
+
+    @if( responseText.length > 0 ) {
+      <div class="buttons">
+        <button
+          class="send-btn pointer"
+          id="more-btn"
+        >
+          Ver más preguntas
+        </button>
+
+        <button
+          class="send-btn pointer"
+          id="chat-btn"
+          (click)="goToChatBot()"
+        >
+          Seguir conversación
+        </button>
+      </div>
+    }
   </div>
 
   @if ( responseText.length > 0 ) {
