--- a/src/app/vet/components/diagnosis/diagnosis.component.css
+++ b/src/app/vet/components/diagnosis/diagnosis.component.css
@@ -210,6 +210,12 @@
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
 }
 
+.buttons {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+
 @keyframes rotation {
   0% {
     transform: rotate(0deg);
