Puesta una coma

--- a/src/app/user/components/profile/profile.component.html
+++ b/src/app/user/components/profile/profile.component.html
@@ -1,6 +1,6 @@
 <div class="main-content">
   <div class="greeting">
-    <h2 class="greeting-text">Hola {{ user?.name }}</h2>
+    <h2 class="greeting-text">Hola, {{ user?.name }}</h2>
   </div>
 
   <div class="profile-photo">
