Ya funciona la comunicación con la IA.
Falta hacer que se pueda crear una y hacer que sea persistente a recargas

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -179,6 +179,15 @@
     </button>
 
     <button
+      class="menu-btn profile-btn"
+      id="chatbot-btn"
+      routerLink="/chat"
+      (click)="closeProfileMenu()"
+    >
+      Mis conversaciones
+    </button>
+
+    <button
       class="menu-btn logout-btn"
       id="logout-btn"
       (click)="logOut(); closeProfileMenu()"
@@ -242,6 +251,15 @@
           (click)="closeFullscreenMenu()"
         >
           Mis incidencias
+        </button>
+
+        <button
+          class="menu-btn profile-btn"
+          id="chatbot-btn"
+          routerLink="/chat"
+          (click)="closeProfileMenu()"
+        >
+          Mis conversaciones
         </button>
 
         <button
